# open-grid-emissions

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CLEANING_PROGRESS.md  ISSUES.md  LICENSE.md  Pipfile  README.md  data_pipeline.py  environment.yml  pyproject.toml  requirements.txt  setup.py  setup.sh  toc.json
.github/: pull_request_template.md
.github/workflows/: lint.yml
config/: gridemissions.json
data/manual/: ba_reference.csv  corrected_bas_to_patch_pudl.csv  default_gross_to_net_ratios.csv  eia930_corrections.csv  emission_factors_for_co2_ch4_n2o.csv  emission_factors_for_nox.csv  emission_factors_for_so2.csv  energy_source_groups.csv  epa_eia_crosswalk_manual.csv  geothermal_emission_factors.csv  ipcc_gwp.csv  physical_ba.csv  plants_not_connected_to_grid.csv  retired_bas.csv  steam_units_to_remove.csv  updated_oth_energy_source_codes.csv  utility_name_ba_code_map.csv
docs/: .spectral.json  toc.json
docs/.stoplight/: styleguide.json
example/: hourly_egrid.ipynb
notebooks/: 930_lag.ipynb  930_test.ipynb  WIP_explore_grid_gross_loss.ipynb  WIP_fill_missing_nox_so2_cems.ipynb  calculate_residual_net_generation.ipynb  cems_coverage.ipynb  clean_930_compare_residual.ipynb  compare_data_sources.ipynb  compare_eia_egrid.ipynb  compare_hourly_egrid.ipynb  data_pipeline.ipynb  data_validation.ipynb  debug.py  distribute_923_net_generation.ipynb  egrid_gen_file_code.ipynb  explore_crosswalk.ipynb  explore_final_results.ipynb  export_923_emissions_all_pollutants.ipynb  export_eia_923_data.ipynb  fix_nox_so2_calculations.ipynb  gailin_clean_cems.ipynb  gailin_consumed_scrap.ipynb  gailin_temp_hourly.ipynb  generator_classification.ipynb  hourly_egrid.ipynb  hourly_validation.ipynb  investigate_cems_steam_load.ipynb  milo_data_export.ipynb  pipeline_notebook.ipynb  plant_class_differences.ipynb  programmatically_update_OTH_fuel_code.ipynb  test.ipynb  test_dask.ipynb  test_data_pipeline.ipynb  test_distribute_923.ipynb  test_gross_to_net.ipynb  test_hourly_profiles.ipynb  uncertainty_analysis.ipynb  update_ba_reference.ipynb  validate_data_cleaning.ipynb  (+4 more)
notebooks/explore_data/: compare_data_sources.ipynb  compare_plant_coordinates.ipynb  electric_vehicle_footprint.ipynb  explore_annually_reported_eia_data.ipynb  explore_eia923_allocated.ipynb  explore_eia930.ipynb  explore_final_results.ipynb  explore_intermediate_outputs.ipynb  explore_sulfur_content.ipynb  export_eia860.ipynb  export_generator_data.ipynb  fleet_emission_variation.ipynb  gens_not_in_cems.ipynb  manually_import_uncontrolled_emission_factors.ipynb  miso_data_exports.ipynb  test_data_pipeline.ipynb
notebooks/explore_methods/: calculate_residual_net_generation.ipynb  national_wind_solar_correlations.ipynb  test_allocate_gen_fuel.ipynb
notebooks/manual_data/: create_nox_so2_factor_tables.ipynb  default_fuel_sulfur_content.ipynb  export_fuel_heat_content.ipynb  identify_eia930_time_lags.ipynb  manually_identify_crosswalk_updates.ipynb  manually_import_uncontrolled_emission_factors.ipynb  manually_update_OTH_fuel_code.ipynb  manually_update_ba_reference.ipynb  update_steam_units_to_remove.ipynb  update_utility_name_ba_map.ipynb  zip_data.ipynb
notebooks/validation/: anomaly_screening.ipynb  data_validation.ipynb  diff_output_versions.ipynb  egrid_validation_updated.ipynb  hourly_validation.ipynb  validate_data_cleaning.ipynb  validate_hourly_profiles.ipynb  validate_negative_profiles.ipynb  validate_subplant_crosswalk.ipynb  validate_vs_egrid.ipynb
notebooks/visualization/: map_visualization.ipynb  plot_timeseries_data.ipynb
notebooks/work_in_progress/: FIX_MISSING_CONSUMED.ipynb  GH102_test_dask.ipynb  allocate.ipynb  (+32 more)
src/: __init__.py  allocate_fuel.py  assign_hourly.py  column_checks.py  constants.py  consumed.py  data_cleaning.py  data_pipeline.py  distribute_eia923.py  download_data.py  eia.py  eia930.py  emission_factors.py  emissions.py  filepaths.py  grid_gross_loss.py  gross_to_net_generation.py  hourly_egrid.py  impute_hourly_profiles.py  load_data.py  logging_util.py  new_consumed.py  output_data.py  pudl.py  residual.py  sample_plants.py  validate_egrid.py  validation.py  visualization.py
test/: README.md  __init__.py  test_clean_eia923.py  test_data_cleaning.py  test_download_data.py  test_eia.py  test_emissions.py  test_gwp.py  test_hourly_egrid.py  test_load_data.py  test_logging.py  test_pudl.py
workflow/: Snakefile
(+96 files in other folders)
