[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "oge"
version = "0.5.0"
requires-python = ">=3.11,<3.12"
readme = "README.md"
authors = [
  { name="Greg Miller", email="greg.miller@singularity.energy" },
]
description = "Open-source grid emissions data processing tools"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "cvxopt",
  "cvxpy",
  "geopy",
  "osqp",
  "numpy",
  "openpyxl",
  "pandas",
  "pyarrow",
  "qdldl",
  "requests",
  "seaborn",
  "sqlalchemy",
  "statsmodels",
  "coloredlogs",
  "s3fs",
  "catalystcoop-pudl@git+https://github.com/singularity-energy/pudl.git@oge_release",
  "gridemissions@git+https://github.com/singularity-energy/gridemissions.git",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
notebook = [
  "ipykernel",
  "notebook",
  "plotly",
]

[project.urls]
Homepage = "https://github.com/singularity-energy/open-grid-emissions"
Issues = "https://github.com/singularity-energy/open-grid-emissions/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["src/oge"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "venv",
]

# All paths are relative to the project root, which is the directory containing the pyproject.toml.
src = ["src"]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

# Built-in for Jupyter
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude notebooks
exclude = ["*.ipynb"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
